--- a/index.html
+++ b/index.html
@@ -2,15 +2,18 @@
 
 <html lang="en">
     <head>
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
-        <link href="index-style.css" rel="stylesheet">
-        <meta charset="UTF-8">
-        <meta name="description" content="Daniel Calvo's About Me Website">
-        <meta name="keywords" content="HTML, CSS, JavaScript">
-        <meta name="author" content="Daniel Calvo">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <div id="libraries"></div>
+
+        <!-- Stylesheet -->
+        <link href="/css/index-style.css" rel="stylesheet">
+        <!-- Loader -->
+        <script src="//code.jquery.com/jquery-1.10.2.js"></script>
+        <script>
+            $(function(){
+                $("#footer").load("/includes/footer.html");
+                $("#libraries").load("/includes/libraries.html");
+            });
+        </script>
 
         <title>Daniel's Webpage</title>
     </head>
@@ -19,12 +22,9 @@
             <li><a aria-labelledby="Home page" href="index.html">Home</a></li>
             <li><a aria-labelledby="About me page" href="about.html">About Me</a></li>
             <li><a aria-labelledby="Photos page" href="photos.html">Photos</a></li>
-            <li><a aria-labelledby="Contact page" href="contact.html">Contact</a></li>
+            <li><a aria-labelledby="Resume page" href="resume.html">Resume</a></li>
         </ul>
 
     </body>
-    <footer>
-        Powered by HTML, CSS, and Javascript.<br>
-        Designed and maintained by Daniel Calvo.
-    </footer>
+    <div id="footer"></div>
 </html>
