--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             <li><a aria-labelledby="About me page" href="about.html">About Me</a></li>
             <li><a aria-labelledby="Photos page" href="photos.html">Photos</a></li>
             <li><a aria-labelledby="Resume page" href="resume.html">Resume</a></li>
+            <li><a class="github-link" aira-labelledby="Github profile" href="https://github.com/dcalvo4-dev" target="_blank">GitHub</a></li>
         </ul>
 
     </body>
