--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
         <h1>About Me</h1>
         <h2>Bio</h2>
         <p>
-            Daniel Calvo is a Computer Science Alumni from <a href="https://en.wikipedia.org/wiki/Texas_A%26M_University%E2%80%93Commerce">Texas A&M University-Commerce</a>. He is currently an Inventory and Distribution
+            Daniel Calvo is an Computer Science Alumni from <a href="https://en.wikipedia.org/wiki/Texas_A%26M_University%E2%80%93Commerce">Texas A&M University-Commerce</a>. He is currently an Inventory and Distribution
             Associate in the Alameda County Community Food Bank practicing in data analytics. At work, he is constantly on the lookout for process improvements that allow him to take advantage of his programming abilities.
             During his free time at home he enjoys studying and continuing his passion in web development.
         </p>
@@ -34,7 +34,7 @@
                     <p>
                         An avid learner of finance and a habitual (but healthy) money saver. He enjoys simple and
                         long-term index fund investing and thorough budgeting in order to reach his goal of financial
-                        independence and retiring early or other wise known as the &#128293;<a href="https://www.investopedia.com/terms/f/financial-independence-retire-early-fire.asp">FIRE</a>&#128293; method.
+                        independence and retiring early or other wise known as &#128293;<a href="https://www.investopedia.com/terms/f/financial-independence-retire-early-fire.asp">FIRE</a>&#128293;!
                     </p>
                 </td>
                 <td>
