--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
                     <p>
                         An avid learner of finance and a habitual (but healthy) money saver. He enjoys simple and
                         long-term index fund investing and thorough budgeting in order to reach his goal of financial
-                        independence and retiring early or other wise known as &#128293;<a href="https://www.investopedia.com/terms/f/financial-independence-retire-early-fire.asp">FIRE</a>&#128293;.
+                        independence and retiring early or other wise known as <span role="img" aria-hidden="true">&#128293;</span><a href="https://www.investopedia.com/terms/f/financial-independence-retire-early-fire.asp">FIRE</a><span role="img" aria-hidden="true">&#128293;</span>.
                     </p>
                 </td>
                 <td>
