--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
         </p>
         <h2>Interests</h2>
         <h3>Finance</h3>
-        <table>
+        <table role="presentation">
             <tr>
                 <td>
                     <p>
