--- a/resume.html
+++ b/resume.html
@@ -4,7 +4,7 @@
     <head>
         <div id="libraries"></div>
         <!-- Stylesheet -->
-        <link href="/css/styles.css" rel="stylesheet">
+        <link href="/css/styles.css" type="text/css" rel="stylesheet">
         <!-- Loader -->
         <script src="//code.jquery.com/jquery-1.10.2.js"></script>
         <script>
