--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
         <title>Daniel's Webpage</title>
     </head>
     <body>
-        <ul class="center">
-            <li><a aria-labelledby="Home page" href="index.html">Home</a></li>
-            <li><a aria-labelledby="About me page" href="about.html">About Me</a></li>
-            <li><a aria-labelledby="Photos page" href="photos.html">Photos</a></li>
-            <li><a aria-labelledby="Resume page" href="resume.html">Resume</a></li>
-            <li><a class="github-link" aira-labelledby="Github profile" href="https://github.com/dcalvo4-dev" target="_blank">GitHub</a></li>
+        <ul class="center" role="main-menu">
+            <li><a aria-labelledby="menu-item Home" href="index.html">Home</a></li>
+            <li><a aria-labelledby="menu-item About Me" href="about.html">About Me</a></li>
+            <li><a aria-labelledby="menu-item Photos" href="photos.html">Photos</a></li>
+            <li><a aria-labelledby="menu-item Resume" href="resume.html">Resume</a></li>
+            <li><a class="github-link" aira-labelledby="menu-item Github" href="https://github.com/dcalvo4-dev" target="_blank">GitHub</a></li>
         </ul>
 
     </body>
