Update main index page

--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
         <title>Daniel's Webpage</title>
     </head>
     <body>
-        <ul class="center" role="main-menu">
-            <li><a aria-labelledby="menu-item Home" href="index.html">Home</a></li>
-            <li><a aria-labelledby="menu-item About Me" href="about.html">About Me</a></li>
-            <li><a aria-labelledby="menu-item Photos" href="photos.html">Photos</a></li>
-            <li><a aria-labelledby="menu-item Resume" href="resume.html">Resume</a></li>
-            <li><a class="github-link" aira-labelledby="menu-item Github" href="https://github.com/dcalvo4-dev" target="_blank">GitHub</a></li>
-        </ul>
+        <div class="main-menu" role="navigation">
+            <a href="index.html">Home</a>
+            <a href="about.html">About Me</a>
+            <a href="photos.html">Photos</a>
+            <a class="resume-link" href="resume.html">Resume</a>
+            <a class="github-link" href="https://github.com/dcalvo4-dev" target="_blank">GitHub</a></li>
+            </div>
 
     </body>
     <div id="footer"></div>
