--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="main-menu" role="navigation">
             <a href="index.html">Home</a>
             <a href="about.html">About Me</a>
-            <a href="photos.html">Photos</a>
+            <!-- <a href="photos.html">Photos</a> -->
             <a class="resume-link" href="resume.html">Resume</a>
             <a class="github-link" href="https://github.com/dcalvo4-dev" target="_blank">GitHub</a></li>
             </div>
