--- a/about.html
+++ b/about.html
@@ -20,44 +20,37 @@
     <body>
         <div id="top-nav"></div>
         <h1>About Me</h1>
-        <h2>Bio</h2>
-        <p>
-            Daniel Calvo is an Computer Science Alumni from <a href="https://en.wikipedia.org/wiki/Texas_A%26M_University%E2%80%93Commerce">Texas A&M University-Commerce</a>. He is currently an Inventory and Distribution
-            Associate in the Alameda County Community Food Bank practicing in data analytics. At work, he is constantly on the lookout for process improvements that allow him to take advantage of his programming abilities.
-            During his free time at home he enjoys studying and continuing his passion in web development.
-        </p>
-        <h2>Interests</h2>
-        <h3>Finance</h3>
-        <table role="presentation">
-            <tr>
-                <td>
-                    <p>
+
+        <div id="bio">
+            <h2>Bio</h2>
+            <p>
+                Daniel Calvo is an Computer Science Alumni from <a href="https://en.wikipedia.org/wiki/Texas_A%26M_University%E2%80%93Commerce">Texas A&M University-Commerce</a>. He is currently an Inventory and Distribution
+                Associate in the Alameda County Community Food Bank practicing in data analytics. At work, he is constantly on the lookout for process improvements that allow him to take advantage of his programming abilities.
+                During his free time at home he enjoys studying and continuing his passion in web development.
+            </p>
+        </div>
+        <div id="interests">
+            <h2>Interests</h2>
+            <h3>Finance</h3>
+            <div>
+                <div class="left-col">
                         An avid learner of finance and a habitual (but healthy) money saver. He enjoys simple and
                         long-term index fund investing and thorough budgeting in order to reach his goal of financial
                         independence and retiring early or other wise known as <span aria-hidden="true">&#128293;</span><a href="https://www.investopedia.com/terms/f/financial-independence-retire-early-fire.asp">FIRE</a><span aria-hidden="true">&#128293;</span>.
-                    </p>
-                </td>
-                <td>
-                    <img id="money_saver" src="/media/Saving_Money.jpg" alt="A hand placing coins into a jar.">
-                </td>
-            </tr>
-        </table>
-        <h3>Fitness</h3>
-        <table>
-            <tr>
-                <td>
-                    <p>
-                        A strong believer in health and fitness. Bodyweight exercises ensure a healthy body while also providing
-                        functional "not only for looks" muscles. He is currently enjoying the
-                        <a href="https://www.reddit.com/r/bodyweightfitness/wiki/kb/recommended_routine">Recommended Routine</a>,
-                        a Calisthenics/Bodyweight routine for beginner through intermediate fitness enthusiasts.
-                    </p>
-                </td>
-                <td>
-                    <img id ="pushups_gif" src="/media/pushups.gif" alt="A person doing pushups.">
-                </td>
-            </tr>
-        </table>
+                </div>
+                <img class="center" id="money_saver" src="/media/Saving_Money.jpg" alt="A hand placing coins into a jar.">
+            </div>
 
+            <h3>Fitness</h3>
+            <div>
+                <div class="left-col">
+                    A strong believer in health and fitness. Bodyweight exercises ensure a healthy body while also providing
+                    functional "not only for looks" muscles. He is currently enjoying the
+                    <a href="https://www.reddit.com/r/bodyweightfitness/wiki/kb/recommended_routine">Recommended Routine</a>,
+                    a Calisthenics/Bodyweight routine for beginner through intermediate fitness enthusiasts.
+                </div>
+                <img id ="pushups_gif" src="/media/pushups.gif" alt="A person doing pushups.">
+            </div>
+        </div>
     <div id="footer"></div>
 </html>
