--- a/about.html
+++ b/about.html
@@ -20,8 +20,7 @@
     <body>
         <div id="top-nav"></div>
         <h1>About Me</h1>
-
-        <div id="bio">
+        <div>
             <h2>Bio</h2>
             <p>
                 Daniel Calvo is an Computer Science Alumni from <a href="https://en.wikipedia.org/wiki/Texas_A%26M_University%E2%80%93Commerce">Texas A&M University-Commerce</a>. He is currently an Inventory and Distribution
@@ -30,6 +29,15 @@
             </p>
         </div>
         <div id="interests">
+            <h2>Interests</h2>
+            <h3>Finance</h3>
+            <div class="row">
+                <div class="column">
+                    An avid learner of finance and a habitual (but healthy) money saver. He enjoys simple and
+                    long-term index fund investing and thorough budgeting in order to reach his goal of financial
+                    independence and retiring early or other wise known as <span aria-hidden="true">&#128293;</span><a href="https://www.investopedia.com/terms/f/financial-independence-retire-early-fire.asp">FIRE</a><span aria-hidden="true">&#128293;</span>.
+                </div>
+            </div>
             <h2>Interests</h2>
             <h3>Finance</h3>
             <div>
