Added a pdf viewer for my resume. I also began updating aria-albels and tabbing order to improve screen reader navigation.

--- a/about.html
+++ b/about.html
@@ -15,12 +15,17 @@
             });
         </script>
 
+        <script>
+            document.addEventListener("DOMContentLoaded", () => {
+                document.getElementsByID('home-btn').focus();
+            })
+        </script>
+
         <title>About Me</title>
     </head>
     <body>
         <div id="top-nav"></div>
         <h1>About Me</h1>
-
         <div id="bio">
             <h2>Bio</h2>
             <p>
