--- a/resume.html
+++ b/resume.html
@@ -2,6 +2,10 @@
 
 <html lang="en">
     <head>
+        <meta charset="utf-8"/>
+        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
+        <meta id="viewport" name="viewport" content="width=device-width, initial-scale=1"/>
+
         <div id="libraries"></div>
         <!-- Stylesheet -->
         <link href="/css/styles.css" type="text/css" rel="stylesheet">
@@ -19,6 +23,7 @@
     </head>
     <body>
         <div id="top-nav"></div>
+        <iframe src="/media/Calvo, Daniel - Resume.pdf" id="resume"></iframe>
     </body>
     <div id="footer"></div>
 </html>
