--- a/about.html
+++ b/about.html
@@ -15,6 +15,7 @@
             });
         </script>
 
+        <!-- Initial focus -->
         <script>
             document.addEventListener("DOMContentLoaded", () => {
                 document.getElementsByID('home-btn').focus();
@@ -29,32 +30,37 @@
         <div id="bio">
             <h2>Bio</h2>
             <p>
-                Daniel Calvo is an Computer Science Alumni from <a href="https://en.wikipedia.org/wiki/Texas_A%26M_University%E2%80%93Commerce">Texas A&M University-Commerce</a>. He is currently an Inventory and Distribution
-                Associate in the Alameda County Community Food Bank practicing in data analytics. At work, he is constantly on the lookout for process improvements that allow him to take advantage of his programming abilities.
-                During his free time at home he enjoys studying and continuing his passion in web development.
+                Hello! My name is Daniel Calvo and I am a Computer Science Alumni from <a href="https://en.wikipedia.org/wiki/Texas_A%26M_University%E2%80%93Commerce">Texas A&M University-Commerce</a>. I am currently a Data Analyst
+                at the Alameda County Community Food Bank. At work, I am is constantly on the lookout for process improvements that I can implement through task automation that allow me to take advantage of my programming abilities.
+                During my free time at home I enjoy studying and practicing my hobby in web development.
             </p>
         </div>
         <div id="interests">
             <h2>Interests</h2>
             <h3>Finance</h3>
-            <div>
-                <div class="left-col">
-                        An avid learner of finance and a habitual (but healthy) money saver. He enjoys simple and
-                        long-term index fund investing and thorough budgeting in order to reach his goal of financial
-                        independence and retiring early or other wise known as <span aria-hidden="true">&#128293;</span><a href="https://www.investopedia.com/terms/f/financial-independence-retire-early-fire.asp">FIRE</a><span aria-hidden="true">&#128293;</span>.
+            <div class="flex">
+                <div class="flex-item">
+                        I am an avid learner of finance and a habitual (but healthy) money saver. Currently, I enjoy simple
+                        investing and thorough budgeting in order to reach my ultimate goal of financial
+                        independence and retiring early or <span aria-hidden="true">&#128293;</span><a href="https://www.investopedia.com/terms/f/financial-independence-retire-early-fire.asp">FIRE</a><span aria-hidden="true">&#128293;</span>!
                 </div>
-                <img class="center" id="money_saver" src="/media/Saving_Money.jpg" alt="A hand placing coins into a jar.">
+
+                <div class="flex-item">
+                    <img class="center" id="money_saver" src="/media/Saving_Money.jpg" alt="Coins being placed into a jar.">
+                </div>
             </div>
 
             <h3>Fitness</h3>
-            <div>
-                <div class="left-col">
-                    A strong believer in health and fitness. Bodyweight exercises ensure a healthy body while also providing
-                    functional "not only for looks" muscles. He is currently enjoying the
-                    <a href="https://www.reddit.com/r/bodyweightfitness/wiki/kb/recommended_routine">Recommended Routine</a>,
-                    a Calisthenics/Bodyweight routine for beginner through intermediate fitness enthusiasts.
+            <div class="flex">
+                <div class="flex-item">
+                    I strongly believe in health and fitness. Bodyweight exercises ensure a healthy body while also providing
+                    functional "not only for looks" muscles. At the moment, I am enjoying the
+                    <a href="https://www.reddit.com/r/bodyweightfitness/wiki/kb/recommended_routine">Recommended Routine</a> which
+                    is a Calisthenics/Bodyweight routine designed for beginner through intermediate fitness enthusiasts.
                 </div>
-                <img id ="pushups_gif" src="/media/pushups.gif" alt="A person doing pushups.">
+                <div class="flex-item">
+                    <img id ="pushups_gif" src="/media/pushups.gif" alt="A person doing pushups.">
+                </div>
             </div>
         </div>
     <div id="footer"></div>
