--- a/about.html
+++ b/about.html
@@ -42,7 +42,7 @@
                 <div class="flex-item">
                         I am an avid learner of finance and a habitual (but healthy) money saver. Currently, I enjoy simple
                         investing and thorough budgeting in order to reach my ultimate goal of financial
-                        independence and retiring early or <span aria-hidden="true">&#128293;</span><a href="https://www.investopedia.com/terms/f/financial-independence-retire-early-fire.asp">FIRE</a><span aria-hidden="true">&#128293;</span>!
+                        independence and retiring early or <span aria-hidden="true">&#128293;</span><a href="https://www.investopedia.com/terms/f/financial-independence-retire-early-fire.asp">FIRE</a><span aria-hidden="true">&#128293;</span>.
                 </div>
 
                 <div class="flex-item">
