--- a/index.html
+++ b/index.html
@@ -24,12 +24,15 @@
         <title>Daniel's Webpage</title>
     </head>
     <body>
+        <div id="type-writer">
+            I'm Daniel, welcome to my page!
+        </div>
         <div class="main-menu" role="navigation">
-            <a tabindex="1" href="index.html">Home</a>
-            <a tabindex="2" href="about.html">About Me</a>
+            <a href="index.html">Home</a>
+            <a href="about.html">About Me</a>
             <!-- <a href="photos.html">Photos</a> -->
-            <a tabindex="3" class="resume-link" href="resume.html">Resume</a>
-            <a tabindex="4" class="github-link" href="https://github.com/dcalvo4-dev" target="_blank">GitHub</a></li>
+            <a class="resume-link" href="resume.html">Resume</a>
+            <a class="github-link" href="https://github.com/dcalvo4-dev" target="_blank">GitHub</a></li>
             </div>
 
     </body>
