--- a/resume.html
+++ b/resume.html
@@ -23,6 +23,8 @@
     </head>
     <body>
         <div id="top-nav"></div>
+
+        <h1>Resume</h1>
         <iframe src="/media/Calvo, Daniel - Resume.pdf" id="resume"></iframe>
     </body>
     <div id="footer"></div>
