--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </head>
     <body>
         <div id="type-writer">
-            I'm Daniel, welcome to my page!
+            My name is Daniel, welcome to my page!
         </div>
         <div class="main-menu" role="navigation">
             <a href="index.html">Home</a>
