Typewriter Update/Theme switch proto
Updated my about page typewriter because the last letter in "About Me" was getting cut too short. I added a new typewriter for my Resume page for consistency.

I also started a prototype for the theme switcher. I can't seem to get Bootstrap to load properly.

For next time: Continue working on the theme switcher. Ideally the switch is concise. I think I will start with light and dark themes first. In the future I can transition over to multiple color themes to address the different kinds of color blindness.

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <title>Daniel's Webpage</title>
     </head>
     <body>
-        <div id="type-writer">
+        <div id="typewriter">
             My name is Daniel, welcome to my page!
         </div>
         <div class="main-menu" role="navigation">
