--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
     </head>
     <body>
         <div id="top-nav"></div>
-        <h1 id="about-type-writer">About Me</h1>
+        <h1 id="about-typewriter">About Me</h1>
         <div id="bio">
             <h2>Bio</h2>
             <p>
