--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head>
         <div id="libraries"></div>
         <!-- Stylesheet -->
-        <link href="/css/index-style.css" type="text/css" rel="stylesheet">
+        <link href="/css/styles.css" type="text/css" rel="stylesheet">
         <!-- Loader -->
         <script src="//code.jquery.com/jquery-1.10.2.js"></script>
         <script>
@@ -23,16 +23,16 @@
 
         <title>Daniel's Webpage</title>
     </head>
-    <body>
-        <div id="typewriter">
+    <body class="home-body">
+        <div id="home-typewriter">
             My name is Daniel, welcome to my page!
         </div>
         <div class="main-menu" role="navigation">
-            <a href="index.html">Home</a>
-            <a href="about.html">About Me</a>
-            <!-- <a href="photos.html">Photos</a> -->
-            <a class="resume-link" href="resume.html">Resume</a>
-            <a class="github-link" href="https://github.com/dcalvo4-dev" target="_blank">GitHub</a></li>
+            <a tabindex="1" href="index.html">Home</a>
+            <a tabindex="2" href="about.html">About Me</a>
+            <!-- <a tabindex="3" class="home-nav" href="photos.html">Photos</a> -->
+            <a tabindex="4" class="home-resume-link" href="resume.html">Resume</a>
+            <a tabindex="5" class="home-github-link" href="https://github.com/dcalvo4-dev" target="_blank">GitHub</a></li>
             </div>
 
     </body>
