--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <div id="libraries"></div>
         <!-- Stylesheet -->
         <link href="/css/styles.css" type="text/css" rel="stylesheet">
+        <link href="" type="text/css" rel="stylesheet" id="theme-switcher-id">
         <!-- Loader -->
         <script src="//code.jquery.com/jquery-1.10.2.js"></script>
         <script>
