--- a/about.html
+++ b/about.html
@@ -31,8 +31,8 @@
             <h2>Bio</h2>
             <p>
                 Hello! My name is Daniel Calvo and I am a Computer Science Alumni from <a href="https://en.wikipedia.org/wiki/Texas_A%26M_University%E2%80%93Commerce">Texas A&M University-Commerce</a>. I am currently a Data Analyst
-                at the Alameda County Community Food Bank. At work, I am is constantly on the lookout for process improvements that I can implement through task automation that allow me to take advantage of my programming abilities.
-                During my free time at home I enjoy studying and practicing my hobby in web development.
+                at the Alameda County Community Food Bank. At work, I like to take advantage of my programming background by constantly searching for process improvements that I can implement mainly through task automation.
+                During my free time at home I enjoy casual studying and practicing my hobby in web development.
             </p>
         </div>
         <div id="interests">
