--- a/index.html
+++ b/index.html
@@ -2,25 +2,26 @@
 
 <html lang="en">
     <head>
-        <div id="libraries"></div>
         <!-- Stylesheet -->
         <link href="" rel="stylesheet" id="theme-switcher-id"/>
         <link href="/css/styles.css" type="text/css" rel="stylesheet">
+
         <!-- Loader -->
         <script src="//code.jquery.com/jquery-1.10.2.js"></script>
         <script>
             $(function(){
                 $("#footer").load("/includes/footer.html");
                 $("#libraries").load("/includes/libraries.html");
+                $("#theme-switch").load("/includes/theme-switch.html");
             });
         </script>
 
-        <script>
-            // Focus on the first link after content is loaded.
-            document.addEventListener("DOMContentLoaded", () => {
-                document.getElementsByTagName('a')[0].focus();
-            })
-        </script>
+        <script src="js/first-focus.js"></script>
+
+        <!-- Theme switcher-->
+        <script src="/js/theme-switch.js"></script>
+        <!-- Bootstrap library-->
+        <div id="bootstrap-library"></div>
 
         <title>Daniel's Webpage</title>
     </head>
@@ -28,10 +29,10 @@
         <div id="home-typewriter">
             My name is Daniel, welcome to my page!
         </div>
+        <div id="theme-switch"></div>
         <div class="main-menu" role="navigation">
             <a tabindex="1" href="index.html">Home</a>
             <a tabindex="2" href="about.html">About Me</a>
-            <!-- <a tabindex="3" class="home-nav" href="photos.html">Photos</a> -->
             <a tabindex="4" class="home-resume-link" href="resume.html">Resume</a>
             <a tabindex="5" class="home-github-link" href="https://github.com/dcalvo4-dev" target="_blank">GitHub</a></li>
             </div>
