--- a/about.html
+++ b/about.html
@@ -62,7 +62,7 @@
             <div class="flex">
                 <div class="flex-item">
                     I strongly believe in health and fitness. Bodyweight exercises ensure a healthy body while also providing
-                    functional not only for looks muscles. At the moment, I am enjoying the
+                    functional and not only for looks muscles. At the moment, I am enjoying the
                     <a href="https://www.reddit.com/r/bodyweightfitness/wiki/kb/recommended_routine">Recommended Routine</a> which
                     is a Calisthenics/Bodyweight routine designed for beginner through intermediate fitness enthusiasts.
                 </div>
