--- a/about.html
+++ b/about.html
@@ -32,13 +32,18 @@
         <title>About Me</title>
     </head>
     <body>
-        <div id="top-nav"></div>
-        <div id="theme-switch"></div>
+        <div class="flex">
+            <div class="flex-item">
+                <div id="top-nav"></div>
+            </div>
+            <div id="theme-switch"></div>
+        </div>
+
         <h1 id="about-typewriter">About Me</h1>
         <div id="bio">
             <h2>Bio</h2>
             <p>
-                Hello! My name is Daniel Calvo and I am a Computer Science Alumni from <a href="https://en.wikipedia.org/wiki/Texas_A%26M_University%E2%80%93Commerce">Texas A&M University-Commerce</a>. I am currently a Data Analyst
+                Hello! My name is Daniel Calvo and I am a Computer Science Alumni from <a target="_blank" href="https://en.wikipedia.org/wiki/Texas_A%26M_University%E2%80%93Commerce">Texas A&M University-Commerce</a>. I am currently a Data Analyst
                 at the Alameda County Community Food Bank. At work, I like to take advantage of my programming background by constantly searching for process improvements that I can implement mainly through task automation.
                 During my free time at home I enjoy casual studying and practicing my hobby in web development.
             </p>
@@ -50,7 +55,7 @@
                 <div class="flex-item">
                         I am an avid learner of finance and a habitual (but healthy) money saver. Currently, I enjoy simple
                         investing and thorough budgeting in order to reach my ultimate goal of financial
-                        independence and retiring early or <span aria-hidden="true">&#128293;</span><a href="https://www.investopedia.com/terms/f/financial-independence-retire-early-fire.asp">FIRE</a><span aria-hidden="true">&#128293;</span>.
+                        independence and retiring early or <span aria-hidden="true">&#128293;</span><a target="_blank" href="https://www.investopedia.com/terms/f/financial-independence-retire-early-fire.asp">FIRE</a><span aria-hidden="true">&#128293;</span>.
                 </div>
 
                 <div class="flex-item">
@@ -63,7 +68,7 @@
                 <div class="flex-item">
                     I strongly believe in health and fitness. Bodyweight exercises ensure a healthy body while also providing
                     functional and not only for looks muscles. At the moment, I am enjoying the
-                    <a href="https://www.reddit.com/r/bodyweightfitness/wiki/kb/recommended_routine">Recommended Routine</a> which
+                    <a target="_blank" href="https://www.reddit.com/r/bodyweightfitness/wiki/kb/recommended_routine">Recommended Routine</a> which
                     is a Calisthenics/Bodyweight routine designed for beginner through intermediate fitness enthusiasts.
                 </div>
                 <div class="flex-item">
