--- a/index.html
+++ b/index.html
@@ -26,17 +26,19 @@
         <title>Daniel's Webpage</title>
     </head>
     <body class="home-body">
+        <div class="flex">
+            <div id="theme-switch"></div>
+        </div>
+
         <div id="home-typewriter">
             My name is Daniel, welcome to my page!
         </div>
-        <div id="theme-switch"></div>
         <div class="main-menu" role="navigation">
             <a tabindex="1" href="index.html">Home</a>
             <a tabindex="2" href="about.html">About Me</a>
             <a tabindex="4" class="home-resume-link" href="resume.html">Resume</a>
             <a tabindex="5" class="home-github-link" href="https://github.com/dcalvo4-dev" target="_blank">GitHub</a></li>
             </div>
-
     </body>
     <div id="footer"></div>
 </html>
