--- a/resume.html
+++ b/resume.html
@@ -25,8 +25,13 @@
         <title>Resume</title>
     </head>
     <body>
-        <div id="top-nav"></div>
-        <div id="theme-switch"></div>
+        <div class="flex">
+            <div class="flex-item">
+                <div id="top-nav"></div>
+            </div>
+            <div id="theme-switch"></div>
+        </div>
+
         <h1 id="resume-typewriter">Resume</h1>
         <iframe src="/media/Calvo, Daniel - Resume.pdf" id="resume"></iframe>
     </body>
