--- a/about.html
+++ b/about.html
@@ -2,6 +2,13 @@
 
 <html lang="en">
     <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
+        <!-- Theme switcher-->
+        <script src="/js/theme-switch.js"></script>
+        
         <!-- Stylesheet -->
         <link href="" rel="stylesheet" id="theme-switcher-id"/>
         <link href="/css/styles.css" type="text/css" rel="stylesheet">
@@ -24,8 +31,6 @@
             })
         </script>
 
-        <!-- Theme switcher-->
-        <script src="/js/theme-switch.js"></script>
         <!-- Bootstrap library-->
        <div id="bootstrap-library"></div>
 
