--- a/resume.html
+++ b/resume.html
@@ -6,26 +6,27 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-        <!-- Theme switcher-->
-        <script src="/js/theme-switch.js"></script>
-
         <!-- Stylesheet -->
-        <link href="" rel="stylesheet" id="theme-switcher-id"/>
-        <link href="/css/styles.css" type="text/css" rel="stylesheet">
+        <link href="/css/styles.css" rel="stylesheet" type="text/css" id="theme-switcher-id"/>
+        <!-- Bootstrap library-->
+        <div id="bootstrap-library"></div>
+        <!-- Fonts -->
+        <div id="fonts"></div>
         
         <!-- Loader -->
-        <script src="//code.jquery.com/jquery-1.10.2.js"></script>
-        <script>
+        <script rel="preload" src="//code.jquery.com/jquery-1.10.2.js"></script>
+        <script rel="preload">
             $(function(){
                 $("#top-nav").load("/includes/top-nav.html");
                 $("#footer").load("/includes/footer.html");
                 $("#bootstrap-library").load("/includes/bootstrap-library.html");
                 $("#theme-switch").load("/includes/theme-switch.html");
+                $("#fonts").load("/includes/fonts.html");
             });
         </script>
 
-        <!-- Bootstrap library-->
-        <div id="bootstrap-library"></div>
+        <!-- Theme switcher-->
+        <script src="/js/theme-switch.js"></script>
         
         <title>Resume</title>
     </head>
@@ -37,7 +38,7 @@
             <div id="theme-switch"></div>
         </div>
 
-        <h1 id="resume-typewriter">Resume</h1>
+        <div id="resume-typewriter" class="type-writer">Resume</div>
         <iframe src="/media/Calvo, Daniel - Resume.pdf" id="resume"></iframe>
     </body>
     <div id="footer"></div>
