--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
         <title>Daniel's Webpage</title>
     </head>
-    <body class="home-body">
+    <body>
         <div class="flex">
             <div id="theme-switch"></div>
         </div>
