--- a/acknowledgements.html
+++ b/acknowledgements.html
@@ -3,12 +3,33 @@
 <html>
     <head>
         <title>Acknowledgements</title>
+
+        <!-- Loader -->
+        <script rel="preload" src="//code.jquery.com/jquery-1.10.2.js"></script>
+        <script rel="preload">
+            $(function(){
+                $("#top-nav").load("/includes/top-nav.html");
+                $("#footer").load("/includes/footer.html");
+                $("#theme-switch").load("/includes/theme-switch.html");
+                $("#fonts").load("/includes/fonts.html");
+            });
+        </script>
     </head>
+    
     <body>
+        <div class="flex">
+            <div class="flex-item">
+                <div id="top-nav"></div>
+            </div>
+            <div id="theme-switch"></div>
+        </div>
+        
         <div class="flex">
             <div class="flex-item">{Sun} designed by <a href="https://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
             <div class="flex-item">{Moon} designed by <a href="https://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
             <div class="flex-item">{Resume} designed by <a href="https://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
         </div>
     </body>
+
+    <div id="footer"></div>
 </html>
