--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <script rel="preload" src="//code.jquery.com/jquery-1.10.2.js"></script>
         <script rel="preload">
             $(function(){
+                $("#top-nav").load("/includes/top-nav.html");
                 $("#footer").load("/includes/footer.html");
                 $("#libraries").load("/includes/libraries.html");
                 $("#theme-switch").load("/includes/theme-switch.html");
@@ -29,8 +30,12 @@
 
         <title>Daniel's Webpage</title>
     </head>
+    
     <body>
         <div class="flex">
+            <div class="flex-item">
+                <div id="top-nav"></div>
+            </div>
             <div id="theme-switch"></div>
         </div>
 
@@ -42,5 +47,6 @@
             <a tabindex="5" class="home-github-link" href="https://github.com/dcalvo4-dev" target="_blank">GitHub</a></li>
         </div>
     </body>
+
     <div id="footer"></div>
 </html>
