--- a/about.html
+++ b/about.html
@@ -1,49 +1,51 @@
 <!DOCTYPE html>
 
 <html lang="en">
+
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
+        <link href="/css/styles.css" type="text/css" rel="stylesheet">
         <!-- Stylesheet -->
-        <link href="/css/styles.css" rel="stylesheet" type="text/css" id="theme-switcher-id"/>
-        <!-- Bootstrap library-->
-        <div id="bootstrap-library"></div>
-        <!-- Fonts -->
-        <div id="fonts"></div>
-
-        <!-- Loader -->
-        <script rel="preload" src="//code.jquery.com/jquery-1.10.2.js"></script>
-        <script rel="preload">
-            $(function(){
-                $("#top-nav").load("/includes/top-nav.html");
-                $("#footer").load("/includes/footer.html");
-                $("#theme-switch").load("/includes/theme-switch.html");
-                $("#fonts").load("/includes/fonts.html");
-            });
-        </script>
-
+        <link href="/css/styles.css" rel="stylesheet" type="text/css" id="theme-switcher-id" />
+        <!-- Google Fonts -->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <!-- Nunito, Open Sans, & Inconsolata -->
+        <link href="https://fonts.googleapis.com/css2?family=Inconsolata&family=Nunito&family=Open+Sans&display=swap" rel="stylesheet">
         <!-- Theme switcher-->
         <script src="/js/theme-switch.js"></script>
 
         <title>About Me</title>
     </head>
-    
+
     <body>
         <div class="flex">
             <div class="flex-item">
-                <div id="top-nav"></div>
+                <div role="nagivation" class="top-nav">
+                    <a class="home-nav" tabindex="1" href="index.html">Home</a>
+                    <a class="home-nav" tabindex="2" href="about.html">About Me</a>
+                    <a class="home-nav" tabindex="3" href="resume.html" class="resume-link">Resume</a>
+                    <a class="home-nav" tabindex="4" href="https://github.com/dcalvo4-dev" target="_blank" class="github-link">GitHub</a>
+                </div>
             </div>
-            <div id="theme-switch"></div>
+            <div class="flex">
+                <div class="flex-item" id="theme-switch"></div>
+            </div>
         </div>
 
         <div id="about-typewriter" class="type-writer">About Me</div>
         <div id="bio">
             <h2>Bio</h2>
             <p>
-                Hello! My name is Daniel Calvo and I am a Computer Science Alumni from <a target="_blank" href="https://en.wikipedia.org/wiki/Texas_A%26M_University%E2%80%93Commerce">Texas A&M University-Commerce</a>. I am currently a Data Analyst
-                at the Alameda County Community Food Bank. At work, I like to take advantage of my programming background by constantly searching for process improvements that I can implement mainly through task automation.
+                Hello! My name is Daniel Calvo and I am a Computer Science Alumni from <a target="_blank"
+                    href="https://en.wikipedia.org/wiki/Texas_A%26M_University%E2%80%93Commerce">Texas A&M
+                    University-Commerce</a>. I am currently a Data Analyst
+                at the Alameda County Community Food Bank. At work, I like to take advantage of my programming
+                background by constantly searching for process improvements that I can implement mainly through task
+                automation.
                 During my free time at home I enjoy casual studying and practicing my hobby in web development.
             </p>
         </div>
@@ -52,30 +54,39 @@
             <h3>Finance</h3>
             <div class="flex">
                 <div class="flex-item">
-                        I am an avid learner of finance and a habitual (but healthy) money saver. Currently, I enjoy simple
-                        investing and thorough budgeting in order to reach my ultimate goal of financial
-                        independence and retiring early or <span aria-hidden="true">&#128293;</span><a target="_blank" href="https://www.investopedia.com/terms/f/financial-independence-retire-early-fire.asp">FIRE</a><span aria-hidden="true">&#128293;</span>.
+                    I am an avid learner of finance and a habitual (but healthy) money saver. Currently, I enjoy simple
+                    investing and thorough budgeting in order to reach my ultimate goal of financial
+                    independence and retiring early or <span aria-hidden="true">&#128293;</span><a target="_blank"
+                        href="https://www.investopedia.com/terms/f/financial-independence-retire-early-fire.asp">FIRE</a><span
+                        aria-hidden="true">&#128293;</span>.
                 </div>
 
                 <div class="flex-item">
-                    <img class="center" id="money_saver" src="/media/Saving_Money.jpg" alt="Coins being placed into a jar.">
+                    <img class="center" id="money_saver" src="/media/Saving_Money.jpg"
+                        alt="Coins being placed into a jar.">
                 </div>
             </div>
 
             <h3>Fitness</h3>
             <div class="flex">
                 <div class="flex-item">
-                    I strongly believe in health and fitness. Bodyweight exercises ensure a healthy body while also providing
+                    I strongly believe in health and fitness. Bodyweight exercises ensure a healthy body while also
+                    providing
                     functional and not only for looks muscles. At the moment, I am enjoying the
-                    <a target="_blank" href="https://www.reddit.com/r/bodyweightfitness/wiki/kb/recommended_routine">Recommended Routine</a> which
+                    <a target="_blank"
+                        href="https://www.reddit.com/r/bodyweightfitness/wiki/kb/recommended_routine">Recommended
+                        Routine</a> which
                     is a Calisthenics/Bodyweight routine designed for beginner through intermediate fitness enthusiasts.
                 </div>
                 <div class="flex-item">
-                    <img id ="pushups_gif" src="/media/pushups.gif" alt="A person doing pushups.">
+                    <img id="pushups_gif" src="/media/pushups.gif" alt="A person doing pushups.">
                 </div>
             </div>
         </div>
     </body>
 
-    <div id="footer"></div>
+    <footer>
+        Powered by <a href="https://github.com/">Github.com</a>
+        <div>Icons made by <a href="https://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
+    </footer>
 </html>
